<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/OnBoardingTitle"
        android:layout_gravity="center"
        android:text="@string/onboarding_first_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/OnBoardingText"
        android:layout_gravity="center"
        android:text="@string/onboarding_first_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/placeholder"
        android:src="@drawable/onboarding_first2x"
        android:translationX="10dp"
        android:translationY="200dp" />

</LinearLayout >